--- a/.github/workflows/template-spec-linux-app-service.yml
+++ b/.github/workflows/template-spec-linux-app-service.yml
@@ -8,9 +8,9 @@ on: [workflow_dispatch]
     #paths:
      # - 'template-specs/linux-app-service/**'
 
-#permissions:
- # id-token: write
- # 3contents: read
+permissions:
+  id-token: write
+  contents: read
 
 #env:
  # AZURE_RESOURCEGROUP_NAME: ToyReusable
@@ -19,9 +19,13 @@ on: [workflow_dispatch]
   #TEMPLATE_SPEC_FILE_PATH: template-specs/linux-app-service/main.bicep
 
 jobs:
-   say-hello:
+   deploy:
     runs-on: ubuntu-latest
-    steps: 
-      - name: 'placeHolder Steps'
-        run: echo 'Hello World'
-
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID}}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
+      
