--- a/.github/workflows/template-spec-linux-app-service.yml
+++ b/.github/workflows/template-spec-linux-app-service.yml
@@ -12,20 +12,26 @@ permissions:
   id-token: write
   contents: read
 
-#env:
- # AZURE_RESOURCEGROUP_NAME: ToyReusable
-  #AZURE_REGION: westus3
-  #TEMPLATE_SPEC_NAME: linux-app-service
-  #TEMPLATE_SPEC_FILE_PATH: template-specs/linux-app-service/main.bicep
+env:
+  AZURE_RESOURCEGROUP_NAME: myersTest2
+  AZURE_REGION: eastus
+  TEMPLATE_SPEC_NAME: linux-app-service
+  TEMPLATE_SPEC_FILE_PATH: template-specs/linux-app-service/main.bicep
 
 jobs:
-   deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID}}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
+    - uses: actions/checkout@v3
+    - uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID}}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
+    - uses: azure/arm-deploy@v1
+      with:
+        deploymentName: ${{ github.run_number}}
+        resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME}}
+        template: ./template-specs/linux-app-service/main.bicep
+
       
